<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="aget.aget.workstation.aplicacionbdparte2.Insertar"
    android:orientation="vertical">

    <!-- Codigo-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ingresa los Datos:" />

    <EditText
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        android:inputType="number" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:inputType="text" />

    <EditText
        android:id="@+id/telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:inputType="phone" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:inputType="textWebEmailAddress" />

    <Spinner
        android:id="@+id/pais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pais"
        android:inputType="number" />

    <TextView
        android:id="@+id/idpaissel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pais"/>

    <Button
        android:id="@+id/guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar" />

</LinearLayout>